<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yashar_turtle_chase</name>
  <version>0.0.0</version>
  <description>Dynamic leader-follower turtlesim demo with leader switching service</description>
  <maintainer email="zafari.h.yashar@gmail.com">Yashar Zafari</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>rosidl_default_runtime</depend>

  <export>
    <build_type>ament_python</build_type>
    <rosidl_generate_interfaces>
      <member_of_group>rosidl_interface_packages</member_of_group>
    </rosidl_generate_interfaces>
  </export>
</package>